--- a/blog_list.html
+++ b/blog_list.html
@@ -10,8 +10,8 @@
       <meta name="keywords" content="" />
       <meta name="description" content="" />
       <meta name="author" content="" />
-      <link rel="shortcut icon" href="images/favicon.png" type="">
-      <title>Famms - Fashion HTML Template</title>
+      <link rel="shortcut icon" href="images/logo.png" type="">
+      <title>Flair.np</title>
       <!-- bootstrap core css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
       <!-- font awesome style -->
@@ -40,7 +40,7 @@
                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <span class="nav-label">Pages <span class="caret"></span></a>
                            <ul class="dropdown-menu">
                               <li><a href="about.html">About</a></li>
-                              <li><a href="testimonial.html">Testimonial</a></li>
+                              <li><a href="testimonial.html"></a></li>
                            </ul>
                         </li>
                         <li class="nav-item">
@@ -449,10 +449,10 @@
             <div class="footer-info">
                <div class="col-lg-7 mx-auto px-0">
                   <p>
-                     &copy; <span id="displayYear"></span> All Rights Reserved By
-                     <a href="https://html.design/">Free Html Templates</a><br>
+                     &copy; <span id="displayYear"></span>
+                     <a href="https://html.design/"></a><br>
          
-                     Distributed By <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+                   <a href="https://themewagon.com/" target="_blank"></a>
                   </p>
                </div>
             </div>
